SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Open_Opps__c.field-meta.xml
<CustomField>
    <fullName>Open_Opps__c</fullName>
    <description>Count of open Opportunities at an Account</description>
    <inlineHelpText>Count of open Opportunities at an Account</inlineHelpText>
    <label>Open Opps</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>contains</operation>
        <value>1,2,3,4,5,6</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>New Business, Expansion, Expansion Add-on, Expansion New Product</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>