SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Opps__c.field-meta.xml
<CustomField>
    <fullName>Opps__c</fullName>
    <inlineHelpText>Number of opportunities associated with this account.</inlineHelpText>
    <label>Opps</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>0 - Open, Duplicate, DQ - Disqualified, 0 - Generate Interest</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>