SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/p2s_base1__AccountStatus__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__AccountStatus__c</fullName>
    <description>This field can be used to automatically drive the Lifecycle Stage value for the account based upon the Account Stage mappings.  Using the Engagio.AccountStatus__c provided via the Engagio app is recommended.</description>
    <inlineHelpText>This field can be used to automatically drive the Lifecycle Stage value for the account based upon the Account Stage mappings.  Using the Engagio.AccountStatus__c provided via the Engagio app is recommended.</inlineHelpText>
    <label>Dash Account Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>