SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/p2s_base1__AttributableData__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__AttributableData__c</fullName>
    <label>Attributable Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>