SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/p2s_base1__AttributableEvent__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__AttributableEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attributable Event</label>
    <type>Checkbox</type>
</CustomField>