SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/p2s_base1__ConversionGeneratedAccount__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__ConversionGeneratedAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field should be mapped using Lead Conversion Mapping from the Lead.ConversionGeneratedAccount__c field</description>
    <inlineHelpText>This field should be mapped using Lead Conversion Mapping from the Lead.ConversionGeneratedAccount__c field</inlineHelpText>
    <label>ConversionGeneratedAccount</label>
    <type>Checkbox</type>
</CustomField>