SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/p2s_base1__LifecycleStage__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__LifecycleStage__c</fullName>
    <description>The classification of your customer in their acquisition lifecycle</description>
    <inlineHelpText>The classification of your customer in their acquisition lifecycle</inlineHelpText>
    <label>Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Engagement</fullName>
                <default>true</default>
                <label>No Engagement</label>
            </value>
            <value>
                <fullName>Aware</fullName>
            </value>
            <value>
                <fullName>MQA</fullName>
            </value>
            <value>
                <fullName>SAL</fullName>
            </value>
            <value>
                <fullName>Open Opportunity</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Not in Model</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>