SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/p2s_base1__SelectEngagioActivitiesFrom__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__SelectEngagioActivitiesFrom__c</fullName>
    <description>If this field is populated, the Account will be used to query Engagio for any related Activities</description>
    <inlineHelpText>If this field is populated, the Account will be used to query Engagio for any related Activities</inlineHelpText>
    <label>Select Engagio Activities From</label>
    <type>Date</type>
</CustomField>