SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/p2s_base1__TransitionDateTime__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__TransitionDateTime__c</fullName>
    <description>This is the date/time of the latest transition on the customer path</description>
    <inlineHelpText>This is the date/time of the latest transition on the customer path</inlineHelpText>
    <label>Transition DateTime</label>
    <type>DateTime</type>
</CustomField>