SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_ID__c</fullName>
    <formula>IF(
Equity_Holding_VC_Firm_Investment_Fund__c = TRUE, Id,
IF(
ISBLANK(ParentId) , Id ,
IF(
Parent.Equity_Holding_VC_Firm_Investment_Fund__c = TRUE, Parent.Id,
IF(
ISBLANK(Parent.ParentId), Parent.Id,
IF(
Parent.Parent.Equity_Holding_VC_Firm_Investment_Fund__c = TRUE, Parent.Parent.Id,
IF(
ISBLANK(Parent.Parent.ParentId) , Parent.Parent.Id ,
IF(
Parent.Parent.Parent.Equity_Holding_VC_Firm_Investment_Fund__c = TRUE, Parent.Parent.Parent.Id,
IF(
ISBLANK(Parent.Parent.Parent.ParentId) , Parent.Parent.Parent.Id ,
IF(
Parent.Parent.Parent.Parent.Equity_Holding_VC_Firm_Investment_Fund__c = TRUE, Parent.Parent.Parent.Parent.Id,
IF(
ISBLANK(Parent.Parent.Parent.Parent.ParentId) , Parent.Parent.Parent.Parent.Id ,
IF(
Parent.Parent.Parent.Parent.Parent.Equity_Holding_VC_Firm_Investment_Fund__c = TRUE, Parent.Parent.Parent.Parent.Parent.Id,
IF(
ISBLANK(Parent.Parent.Parent.Parent.Parent.ParentId) , Parent.Parent.Parent.Parent.Parent.Id,
IF(
Parent.Parent.Parent.Parent.Parent.Parent.Equity_Holding_VC_Firm_Investment_Fund__c = TRUE, Parent.Parent.Parent.Parent.Parent.Parent.Id,
IF(
ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent.ParentId) , Parent.Parent.Parent.Parent.Parent.Parent.Id,
IF(
Parent.Parent.Parent.Parent.Parent.Parent.Parent.Equity_Holding_VC_Firm_Investment_Fund__c = TRUE, Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id,
IF(
ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent.Parent.ParentId) , Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id,
Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id
))))))))))))))))</formula>
    <label>Parent ID</label>
    <type>Text</type>
</CustomField>