SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Parent_Rating__c.field-meta.xml
<CustomField>
    <fullName>Parent_Rating__c</fullName>
    <formula>IF(ISBLANK(TEXT(Parent.Rating)),NULL,TEXT(Parent.Rating))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Rating</label>
    <type>Text</type>
</CustomField>