SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Pendo_Number_of_Visitors_Last_30d__c.field-meta.xml
<CustomField>
    <fullName>Pendo_Number_of_Visitors_Last_30d__c</fullName>
    <label>Pendo Number of Visitors (Last 30d)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>