SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Pendo_Time_on_Site_Last_30d__c.field-meta.xml
<CustomField>
    <fullName>Pendo_Time_on_Site_Last_30d__c</fullName>
    <label>Pendo Time on Site (Last 30d)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>