SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/People__c.field-meta.xml
<CustomField>
    <fullName>People__c</fullName>
    <inlineHelpText>How motivated, skilled and experienced is the team?
Does the team have the right resources, structure, and oversight to do their job?
How well does the team execute?
1=low, 5= high</inlineHelpText>
    <label>People</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X1_5</valueSetName>
    </valueSet>
</CustomField>