SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <description>Most recent closed-won Opportunity plan (e.g., Startup vs. Enterprise)</description>
    <inlineHelpText>Most recent closed-won Opportunity plan.</inlineHelpText>
    <label>Plan</label>
    <length>40</length>
    <type>Text</type>
</CustomField>