SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Platform_Fee_ARR__c.field-meta.xml
<CustomField>
    <fullName>Platform_Fee_ARR__c</fullName>
    <label>Platform Fee ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>