SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Premium_Support__c.field-meta.xml
<CustomField>
    <fullName>Premium_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premium Support</label>
    <type>Checkbox</type>
</CustomField>