SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Previous_CSM__c.field-meta.xml
<CustomField>
    <fullName>Previous_CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous CSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>