SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Previous_CSM_Pro_Rated_ARR__c.field-meta.xml
<CustomField>
    <fullName>Previous_CSM_Pro_Rated_ARR__c</fullName>
    <inlineHelpText>ARR of Opps Closed between Previous CSM Assigned Date and Previous CSM Removed Date</inlineHelpText>
    <label>Previous CSM ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>