SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Previous_CSM_Removed__c.field-meta.xml
<CustomField>
    <fullName>Previous_CSM_Removed__c</fullName>
    <label>Previous CSM Removed</label>
    <type>Date</type>
</CustomField>