SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Primary_AP_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_AP_Email__c</fullName>
    <label>Primary AP Email</label>
    <type>Email</type>
</CustomField>