SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Pro_Plans__c.field-meta.xml
<CustomField>
    <fullName>Pro_Plans__c</fullName>
    <description>Do they have a closed won pro plan?</description>
    <inlineHelpText>Do they have a closed won pro plan?</inlineHelpText>
    <label>Pro Plans</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won, CW - Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Plan__c</field>
        <operation>equals</operation>
        <value>Free, Team, Startup, Growth, Pro</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>New Business, Cross-sell, Expansion, Expansion Add-on, Expansion New Product</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>