SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <inlineHelpText>Are business processes defined and tracked?
Is knowledge effectively captured, updated, and disseminated?
Is the team working cross functionally towards shared goals?
1=low, 5= high</inlineHelpText>
    <label>Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X1_5</valueSetName>
    </valueSet>
</CustomField>