SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/PS_TAM_Engagement__c.field-meta.xml
<CustomField>
    <fullName>PS_TAM_Engagement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PS/TAM Engagement?</label>
    <type>Checkbox</type>
</CustomField>