SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Q1_Target_Account_Retro__c.field-meta.xml
<CustomField>
    <fullName>Q1_Target_Account_Retro__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Old Target Accounts</description>
    <label>Q1 Target Account Retro</label>
    <type>Checkbox</type>
</CustomField>