SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/QBR_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>QBR_Status_Date__c</fullName>
    <description>CSM to input when they plan to deliver a QBR</description>
    <inlineHelpText>CSM to input when they plan to deliver a QBR</inlineHelpText>
    <label>QBR Status (Date)</label>
    <type>Date</type>
</CustomField>