SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Ranking__c.field-meta.xml
<CustomField>
    <fullName>Ranking__c</fullName>
    <inlineHelpText>Zoominfo Ranking</inlineHelpText>
    <label>Ranking</label>
    <length>50</length>
    <type>Text</type>
</CustomField>