SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>(04/2020) Do not use, use standard Rating instead</description>
    <formula>CASE(Parent_Rating__c,
&quot;Strategic&quot;,&quot;Strategic&quot;, 
&quot;Regional&quot;,&quot;Regional&quot;, 
&quot;SMB&quot;,&quot;SMB&quot;, 
&quot;Inside&quot;,&quot;Inside&quot;, 

Default_Rating__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>SMB, General, or Strategic</inlineHelpText>
    <label>rating (deprecated)</label>
    <type>Text</type>
</CustomField>