SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Receptive__Monthy_Value__c.field-meta.xml
<CustomField>
    <fullName>Receptive__Monthy_Value__c</fullName>
    <description>The monthly value of the account to you.</description>
    <inlineHelpText>We use this to help prioritise feature requests. Usually, but not always, a financial value, but feel free to use your own definition of value.</inlineHelpText>
    <label>Monthly Value</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>