SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>East, West, Central. Uploaded from territory sheet</description>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>