SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <formula>IF(
 NOT(ISBLANK( Account_Renewal_Date__c )), Account_Renewal_Date__c ,
IF(
 NOT(ISBLANK( CSM_Renewal_Date__c )), CSM_Renewal_Date__c , 
 NULL
))</formula>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>