SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Renewal_Details__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Details__c</fullName>
    <label>Renewal Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>