SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Renewal_Manager__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.ProfileId</field>
            <operation>equals</operation>
            <value>00e1K0000022jqd</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>