SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Renewal_Save_Plan__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Save_Plan__c</fullName>
    <description>Confluence Link to Renewal Save plan</description>
    <inlineHelpText>Confluence Link to Renewal Save plan</inlineHelpText>
    <label>Renewal Save Plan</label>
    <type>Url</type>
</CustomField>