SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Retention_ARR__c.field-meta.xml
<CustomField>
    <fullName>Retention_ARR__c</fullName>
    <label>Retention ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>