SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Revenue_Review_Pending__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Review_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto-created self-serve account is pending review by revenue. For Sales Operations to be able to review newly created Accounts from self-service flows. Sales Ops will review Accounts and merge where applicable. See BIZ-96.</description>
    <label>Revenue Review Pending</label>
    <type>Checkbox</type>
</CustomField>