SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Risk__c.field-meta.xml
<CustomField>
    <fullName>Risk__c</fullName>
    <label>Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Stoplight</valueSetName>
    </valueSet>
</CustomField>