SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Risks_text__c.field-meta.xml
<CustomField>
    <fullName>Risks_text__c</fullName>
    <label>Risks (text)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>