SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/RollWorks_Account_Score_Lookup__c.field-meta.xml
<CustomField>
    <fullName>RollWorks_Account_Score_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RollWorks Account Score - Lookup</label>
    <referenceTo>adroll__AdRollCompanyListsAccountScores__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>