SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Rollworks_Spike_Level__c.field-meta.xml
<CustomField>
    <fullName>Rollworks_Spike_Level__c</fullName>
    <label>Rollworks Spike Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>