SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Run_Automations__c.field-meta.xml
<CustomField>
    <fullName>Run_Automations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Automations</label>
    <type>Checkbox</type>
</CustomField>