SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/saasoptics__closed_won_opp_count__c.field-meta.xml
<CustomField>
    <fullName>saasoptics__closed_won_opp_count__c</fullName>
    <description>Used to filter our Customers that have no Closed Won Opportunities.</description>
    <label>Customer With Closed Won Opp</label>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>