SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/saasoptics__customer_status__c.field-meta.xml
<CustomField>
    <fullName>saasoptics__customer_status__c</fullName>
    <label>SaaSOptics Customer Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>