SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/saasoptics__saasoptics_total_invoice_li_amount__c.field-meta.xml
<CustomField>
    <fullName>saasoptics__saasoptics_total_invoice_li_amount__c</fullName>
    <inlineHelpText>The total amount of all Invoice Line Items in SaaSOpitcs (excludes tax, shipping)</inlineHelpText>
    <label>Total Invoice Line Item Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>