SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/saasoptics__saasoptics_total_transactions_amount__c.field-meta.xml
<CustomField>
    <fullName>saasoptics__saasoptics_total_transactions_amount__c</fullName>
    <inlineHelpText>The total amount of transactions in SaaSOptics</inlineHelpText>
    <label>Total Transaction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>