SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/saasoptics__total_invoice_balance_prior_month__c.field-meta.xml
<CustomField>
    <fullName>saasoptics__total_invoice_balance_prior_month__c</fullName>
    <description>Used with Visual Force</description>
    <label>Total Invoice Balance Prior Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>