SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Sales_touched__c.field-meta.xml
<CustomField>
    <fullName>Sales_touched__c</fullName>
    <description>Does this Account have a sales-touched open or won Opportunity?</description>
    <inlineHelpText>Does this Account have a sales-touched open or won Opportunity?</inlineHelpText>
    <label>Sales-touched</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Lost, 5L - Closed Lost</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Sales_touched__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>