SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Scheduled_Status_Calls__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Status_Calls__c</fullName>
    <label>Scheduled Status Calls</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>