SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/SE_Owned__c.field-meta.xml
<CustomField>
    <fullName>SE_Owned__c</fullName>
    <description>Used to determine if an SE should be involved in a ZD ticket. Checked if ARR=0 and Open Opps&gt;0</description>
    <formula>IF(
AND( ARR__c = 0,  Open_Opps__c &gt; 0), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to determine if an SE should be involved in a ZD ticket.</inlineHelpText>
    <label>SE Owned</label>
    <type>Checkbox</type>
</CustomField>