SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Secondary_Industry__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Industry__c</fullName>
    <label>Secondary Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>