SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Sentiment__c</fullName>
    <inlineHelpText>How strong is the relationship with the champion?</inlineHelpText>
    <label>Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Stoplight</valueSetName>
    </valueSet>
</CustomField>