SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/SO_Transaction_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SO_Transaction_Start_Date__c</fullName>
    <label>SO Transaction Start Date</label>
    <type>Date</type>
</CustomField>